xwayland/present: Do not send two idle notify events for flip pixmaps

Could happen if the buffer release event was already processed before
xwl_present_flips_stop.

Closes: https://gitlab.freedesktop.org/xorg/xserver/-/issues/1351
Reviewed-by: Olivier Fourdan <ofourdan@redhat.com>